add_library(my_src STATIC
TrafficLightsTimingController.cpp
TrafficLightsController.cpp
ControllerStateMachine.cpp
ControllerLogicModule.cpp
LightBulb.cpp
TrafficLight.cpp
DoubleTrafficLight.cpp
TripleTrafficLight.cpp
CrossRoadsDirector.cpp
Bridge.cpp
)

target_include_directories(my_src PUBLIC src)